[package]
name = "script-list"
version = "0.1.200"
edition = "2021"
authors = ["yfeelib"]
description = "A Rust CLI tool to list npm scripts from package.json"
license = "MIT"
repository = "https://github.com/yfeelib/script-list"
keywords = ["npm", "scripts", "cli", "package-json"]
categories = ["command-line-utilities", "development-tools"]

[[bin]]
name = "sl"
path = "src/main.rs"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
colored = "2.0"
clap = { version = "4.0", features = ["derive"] }
anyhow = "1.0"

[profile.release]
opt-level = 3
lto = true
strip = true
